# datalchemy

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  RETOMADA_PROJETO.md  datalchemy_structure.md  mkdocs.yml  pyproject.toml  sample_use_lib.py  sdv_sample_to_post_use.py  test.py  test_2.py
.github/: requirements.txt
.github/workflows/: pipeline.yaml
crates/datalchemy-cli/: Cargo.toml
crates/datalchemy-cli/src/: main.rs
crates/datalchemy-cli/src/registry/: logging.rs  mod.rs  run.rs
crates/datalchemy-cli/src/tui/: commands.rs  conn.rs  events.rs  events.rs.bak  mod.rs  mod.rs.bak  secrets.rs  state.rs  ui.rs  ui.rs.bak  utils.rs
crates/datalchemy-cli/src/workspace/: approval.rs  atomic.rs  doctor.rs  ids.rs  llm_models.rs  manifests.rs  mod.rs  paths.rs  profiles.rs  settings.rs
crates/datalchemy-core/: Cargo.toml
crates/datalchemy-eval/: Cargo.toml
crates/datalchemy-eval/examples/: evaluate_run.rs
crates/datalchemy-eval/src/: engine.rs  errors.rs  lib.rs  metrics.rs  model.rs  report.rs  schema_metrics.rs
crates/datalchemy-generate/: Cargo.toml
crates/datalchemy-generate/assets/pt_BR/: cities.json  companies.txt  names.txt  products.txt  streets.txt  surnames.txt
crates/datalchemy-generate/examples/: generate_csv.rs  list_generators.rs
crates/datalchemy-generate/faker_catalog/: overrides.toml
crates/datalchemy-generate/src/: assets.rs  checks.rs  engine.rs  errors.rs  foreign.rs  lib.rs  model.rs  params.rs  planner.rs
crates/datalchemy-generate/src/faker_rs/: adapter.rs  catalog_gen.rs  locales.rs  mod.rs
crates/datalchemy-generate/src/generators/: faker_rs.rs  mod.rs
crates/datalchemy-generate/src/generators/derive/: mod.rs
crates/datalchemy-generate/src/generators/domain/: mod.rs
crates/datalchemy-generate/src/generators/domain/crm/: mod.rs
crates/datalchemy-generate/src/generators/domain/finance/: mod.rs
crates/datalchemy-generate/src/generators/domain/logistics/: mod.rs
crates/datalchemy-generate/src/generators/primitives/: mod.rs
crates/datalchemy-generate/src/generators/semantic/: mod.rs
crates/datalchemy-generate/src/generators/transforms/: mod.rs
crates/datalchemy-generate/src/output/: csv.rs
crates/datalchemy-generate/tests/: faker_catalog.rs  faker_e2e.rs  generate_csv.rs  golden_files.rs  primitives_transforms.rs
crates/datalchemy-introspect/: Cargo.toml
crates/datalchemy-introspect/examples/: dump_json.rs
crates/datalchemy-introspect/src/: adapter.rs  lib.rs  options.rs
crates/datalchemy-introspect/src/postgres/: mapper.rs  mod.rs  queries.rs  utils.rs
crates/datalchemy-introspect/src/sqlite/: mapper.rs  mod.rs  queries.rs
crates/datalchemy-introspect/tests/: integration_introspect_postgres.rs
crates/datalchemy-introspect/tests/golden/: postgres_minimal.schema.json
crates/datalchemy-plan/: Cargo.toml
datalchemy/: convert_jsonl.py  data_handler.py  database.py  datalchemy_auto_train.jsonl  datalchemy_full_scenarios.json  generators.py  text.md
docker/: compose.postgres.yml  compose.sqlite.yml
docs/: cli_cargo_run.md  cli_commands.md  end_to_end_postgres.md  faker_integration.md  fixtures.md  generators.md  index.md  plan_generators.md  pr_task_instrospect-database-schema.md  privacy_lgpd.md  requirements.txt  schema_json.md
evidence/: issue_task_20260124_full_stack_crash.md  issue_task_postgres_crm_fixtures.md  pr_task_M0_baseline.md  pr_task_M1_registry_refactor.md  pr_task_M2_primitives_transforms.md  pr_task_M3_common_ptbr.md  pr_task_M4_row_context.md  pr_task_M5_inter_tables.md  pr_task_M6_domains.md  pr_task_M7_hardening.md  pr_task_datalchemy-cli-tui.md  pr_task_faker_e2e_postgres.md  pr_task_implement-faker-rs.md  pr_task_instropect-database-schema_2.md  pr_task_instrospect-database-schema_1.md  pr_task_plan-schema-aware_3.md  pr_task_plan-schema-aware_4.md  pr_task_plan-schema-aware_5.md
examples/: introspect.rs
plans/: crm_realistic.plan.json
plans/examples/: crm_domain.plan.json  faker_baseline.plan.json  faker_enus.plan.json  faker_ptbr.plan.json  finance_domain.plan.json  full_stack_ptbr.plan.json  logistics_domain.plan.json  m2_primitives.plan.json  m3_ptbr.plan.json  m4_derives.plan.json  m5_relationships.plan.json  minimal.plan.json
schemas/: plan.schema.json  schema.schema.json
scripts/: postgres_docker.sh  sqlite_docker.sh
src/: error.rs  lib.rs
src/introspect/: mod.rs
src/model/: constraints.rs  mod.rs  schema.rs  types.rs
src/utils/: pg.rs
tasks/: issue_task_postgres_crm_fixtures.md  pr_task_instropect-database-schema_1.md  pr_task_plan-schema-aware_4.md
tasks/pr_task_datalchemy-cli-tui/: pr_task_datalchemy-cli-tui.md
tasks/pr_task_implement-faker-rs/: issue_task_20260128_faker_pending.md  plan_faker_integration.md  pr_task_implement-faker-rs.md
tests/: test_database.py  test_staticmethods_generators.py
tools/: Cargo.toml  gen_faker_catalog.rs
(+97 files in other folders)
