[workspace]
members = [
  "crates/datalchemy-core",
  "crates/datalchemy-introspect",
  "crates/datalchemy-cli",
  "crates/datalchemy-plan",
  "crates/datalchemy-generate",
  "crates/datalchemy-eval",
]
exclude = ["tools"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
age = "0.11.0"
chrono = { version = "0.4.39", features = ["clock", "serde"] }
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.27.0"
jsonschema = "0.18.0"
ratatui = "0.26.3"
schemars = "0.8.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "time", "env-filter"] }
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
