[package]
name = "datalchemy-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "datalchemy"
path = "src/main.rs"

[dependencies]
datalchemy-core = { path = "../datalchemy-core" }
datalchemy-eval = { path = "../datalchemy-eval" }
datalchemy-generate = { path = "../datalchemy-generate" }
datalchemy-introspect = { path = "../datalchemy-introspect" }
datalchemy-plan = { path = "../datalchemy-plan" }
age.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
sqlx.workspace = true
